# go-ext-wasm

./: Cargo.toml
wasmer/: bridge.go  import.go  instance.go  module.go  wasmer.h
wasmer/test/: module_test.go
