[package]
publish = false
name = "go-ext-wasm"
version = "0.2.0"
authors = ["Ivan Enderlin <ivan.enderlin@hoa-project.net>"]
edition = "2018"
description = "Go library to run WebAssembly binaries"
readme = "README.md"
repository = "https://github.com/wasmerio/go-ext-wasm"
keywords = ["golang", "extension", "webassembly"]
categories = ["wasm"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmer-runtime-c-api =  { git = "https://github.com/AdamSLevy/wasmer", branch = "custom", features = ["llvm-backend", "metering", "wasi"], default-features = false }

[patch.crates-io]
wasmparser =  { git = "https://github.com/AdamSLevy/wasmparser", branch = "OperatorClonev0.39.3" }
